# service-image-optimizer

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  _test.html  deploy.sh  docker-compose.yml  template.yaml  test.html
src/: config.rs  handlers.rs  main.rs  models.rs  services.rs  utils.rs
