[package]
name = "service-compress-image"
version = "0.1.0"
edition = "2024"

[dependencies]
lambda_runtime = "0.8"
hyper = { version = "0.14", features = ["full"] }
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
image = { version = "0.25", features = [
    "jpeg",
    "png",
    "webp",
    "gif",
    "bmp",
    "tiff",
] }
webp = "0.3"
url = "2.5"
multer = "2"
futures-util = "0.3"
bytes = "1"
